# alianator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  tests.py
.github/ISSUE_TEMPLATE/: 0_privileged.yml  1_bug_report.yml  1_privileged.yml  2_bug_report.yml  2_outdated_permission.yml  config.yml
.github/workflows/: pr.yml  publish.yml
src/: __init__.py  alianator.py
src/alianator/: __init__.py  alianator.py  diagnostic.py  resolutions.toml
src/alianator/templates/: diagnostic.mustache  diagnostic.yml.jinja
