[tool.poetry]
name = "alianator"
version = "4.0.1"
description = "A Discord permission name resolver for Pycord"
authors = ["celsius narhwal <celsiusnarhwal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/celsiusnarhwal/alianator"
keywords = ["discord", "permissions", "aliases", "pycord"]
packages = [{include = "alianator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.2"
multimethod = "^1.9.1"
pydantic = "^1.10.4"
titlecase = "2.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
pre-commit = "^2.21.0"
py-cord = "^2.0.0"
rich-tracebacks = "^1.2.1"
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
